fdo#83716 - fix deadlock holding mutex required by rendering thread.

Change-Id: I7195bba02474ac1c00fce0a93f59be622a920686